[package]
name = "rust-web-extension"
description = "A template for building a web extension with Rust"
version = "0.1.0"
repository = "https://github.com/barrymun/rust-web-extension"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
